# EngineQ

./: .gitignore  README.md
EngineQ/Source/: CMakeLists.txt
EngineQ/Source/EngineQ/: CMakeLists.txt  Engine.cpp  Engine.hpp  EngineShaderProperties.cpp  EngineShaderProperties.hpp  InputController.cpp  InputController.hpp  RendererIntermediateConfiguration.cpp  RendererIntermediateConfiguration.hpp  Window.cpp
EngineQ/Source/EngineQ/Graphics/: EngineShaderProperties.cpp  EngineShaderProperties.hpp  RendererIntermediateConfiguration.cpp  RendererIntermediateConfiguration.hpp  ScriptedRenderer.cpp  ScriptedRenderer.hpp  ScriptedRenderingUnit.cpp  ScriptedRenderingUnit.hpp  ScriptedShaderPass.cpp  ScriptedShaderPass.hpp
EngineQ/Source/EngineQ/Objects/: Camera.cpp  Camera.hpp  Component.cpp  Component.hpp  Entity.cpp  Entity.hpp  Entity.inl  Light.cpp  Light.hpp  Object.cpp  Renderable.cpp  Renderable.hpp  Scene.cpp  Scene.hpp  Script.hpp  Transform.cpp  Transform.hpp  Types.hpp
EngineQ/Source/EngineQ/Resources/: CubeTextureFactory.hpp  MeshFactory.cpp  MeshFactory.hpp  Model.cpp  Model.hpp  ModelFactory.cpp  ModelLoader.cpp  PrefabGenerator.cpp  PrefabGenerator.hpp  ResourceFactory.hpp  ResourceManager.cpp  ResourceManager.hpp  ResourceManager.inl  ShaderFactory.hpp  TextureFactory.hpp  Types.hpp
EngineQ/Source/EngineQ/Scripting/: API_Application.cpp  API_Application.hpp  API_Camera.cpp  API_Component.cpp  API_Component.hpp  API_EffectController.cpp  API_EffectController.hpp  API_Entity.cpp  API_Input.cpp  API_Input.hpp  API_Light.cpp  API_Light.hpp  API_Matrix3.cpp  API_Matrix3.hpp  API_Matrix4.cpp  API_Matrix4.hpp  API_PrefabGenerator.cpp  API_PrefabGenerator.hpp  API_Profiler.cpp  API_Profiler.hpp  API_Quaternion.cpp  API_Quaternion.hpp  API_Renderable.cpp  API_Renderable.hpp  API_Resource.cpp  API_Resource.hpp  API_ResourceManager.cpp  API_Scene.cpp  API_Scene.hpp  API_ShaderProperties.cpp  API_TimeCounter.cpp  API_TimeCounter.hpp  API_Transform.cpp  API_Transform.hpp  ScriptEngine.cpp  ScriptEngine.hpp  ScriptEngine.inl  ScriptingExceptions.hpp  Types.hpp
EngineQ/Source/EngineQ/Serialization/: Deserializer.cpp  Deserializer.hpp  Formatter.hpp  Serializable.cpp  Serializable.hpp  SerializationEngine.hpp  SerializationEngine.inl  SerializationRules.hpp  SerializedObject.hpp  Types.hpp  XMLFormatter.hpp
EngineQ/Source/EngineQ/Systems/: InputController.cpp  InputController.hpp  Profiler.cpp  Profiler.hpp  TimeCounter.cpp  TimeCounter.hpp  Window.cpp  Window.hpp
EngineQ/Source/EngineQCommon/: CMakeLists.txt
EngineQ/Source/EngineQCommon/Math/: Matrix3.hpp  Matrix4.cpp  Matrix4.hpp  Quaternion.cpp  Quaternion.hpp  Types.hpp  Utils.cpp  Utils.hpp  Vector2.hpp  Vector2.inl  Vector3.hpp  Vector4.cpp  Vector4.inl
EngineQ/Source/EngineQCommon/Resources/: Resource.hpp
EngineQ/Source/EngineQCommon/Utilities/: Event.hpp  Immovable.hpp  Metaprogramming.hpp  ObjectDestructor.hpp  StringHelpers.hpp
EngineQ/Source/EngineQDemonstration/: CMakeLists.txt  TmpMain.cpp
EngineQ/Source/EngineQDemonstration/_Resources/: Config.xml  DemoPostprocessing.xml  retardedpp.conf
EngineQ/Source/EngineQDemonstration/_Resources/Meshes/: Arrow.qres  Capsule.qres  Horse.qres  Skull.qres
EngineQ/Source/EngineQDemonstration/_Resources/Models/: Arrow.qres  Capsule.qres  Horse.qres  Skull.qres
EngineQ/Source/EngineQDemonstration/_Resources/Shaders/: Combine.frag  Combine.qres  Quad.qres  Quad.vert
EngineQ/Source/EngineQDemonstration/_Templates/: EngineQDemonstration.vcxproj.user.template
EngineQ/Source/EngineQDemonstrationScripts/: ArrowsController.cs  CMakeLists.txt  CameraMoveClass.cs  EngineQDemonstrationScripts.csproj  HittestScript.cs  Initializer.cs  LightController.cs  LightRotateScript.cs  MyEffectController.cs  OptionChanger.cs  PerformanceTest.cs  SSAOController.cs  ShadowmapDrawerController.cs  SingleUpdateRunner.cs  TesterScript.cs
EngineQ/Source/EngineQDemonstrationScripts/Effect controllers/: BrightExtractController.cs  CombineController.cs  LightingController.cs  SSAOController.cs  SSRController.cs
EngineQ/Source/EngineQDemonstrationScripts/Experimental/: CapsuleCollider.cs  Collider.cs  ColliderPicker.cs
EngineQ/Source/EngineQDemonstrationScripts/Properties/: AssemblyInfo.cs
EngineQ/Source/EngineQRenderer/: CMakeLists.txt
EngineQ/Source/EngineQRenderer/Graphics/: Camera.hpp  CubeTexture.cpp  CubeTexture.hpp  Framebuffer.cpp  Framebuffer.hpp  Mesh.hpp  PostprocessingExceptions.cpp  PostprocessingExceptions.hpp  Renderable.hpp  Renderer.cpp  Renderer.hpp  RenderingUnit.cpp  RenderingUnit.hpp  Scene.hpp  Shader.cpp  Shader.hpp  ShaderExceptions.hpp  ShaderPart.hpp  ShaderPass.cpp  ShaderPass.hpp  ShaderPreprocessor.cpp  ShaderPreprocessor.hpp  ShaderProperties.cpp  ShaderProperties.hpp  ShaderProperties.inl  ShaderProperty.hpp  ShaderUniformData.hpp  Texture.cpp  Texture.hpp  UniformLocation.cpp  UniformLocation.hpp  Vertex.cpp  Vertex.hpp
EngineQ/Source/EngineQRendererDefaultImplementation/: CMakeLists.txt
EngineQ/Source/EngineQRendererDemonstration/: CMakeLists.txt  TmpMain.cpp
EngineQ/Source/EngineQScripting/: CMakeLists.txt  EngineQScripting.csproj
EngineQ/Source/EngineQScripting/Graphics/: ShaderProperties.cs  ShaderProperty.cs
EngineQ/Source/EngineQScripting/Math/: Matrix3.cs  Matrix4.cs  Quaternion.cs  Ray.cs  Utils.cs  Vector2i.cs  Vector3i.cs  Vector4d.cs  Vector4f.cs
EngineQ/Source/EngineQScripting/Math/Shapes/: Capsule.cs  (+4 more)
EngineQ/Source/EngineQScripting/Objects/: Camera.cs  Component.cs  EffectController.cs  Entity.cs  Light.cs  Object.cs  Renderable.cs  Scene.cs  Script.cs  Transform.cs
EngineQ/Source/EngineQScripting/Properties/: AssemblyInfo.cs
EngineQ/Source/EngineQScripting/Resources/: Mesh.cs  Model.cs  Resource.cs  Shader.cs  Texture.cs
EngineQ/Source/EngineQScripting/Subsystems/: Application.cs  Input.cs  PrefabGenerator.cs  Profiler.cs  ResourceManager.cs  Time.cs
EngineQ/Source/Schemas/: Config.xsd  PostprocessingConfig.xsd  ResourceCubeTexture.xsd  ResourceMesh.xsd  ResourceModel.xsd  ResourceShader.xsd  ResourceTexture.xsd
(+511 files in other folders)
